[package]
name = "idgen"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.56"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.23", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
error-chain = "0.12.4"
etcd-client = "0.10"
fern = { version = "0.6.1", features = ["colored"] }
futures = "0.3"
log = "0.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }